# statusplattform-nais-operator

./: .env  .gitignore  Cargo.toml  README.md  flake.nix  nais.yml  rustfmt.toml  spec.nix
.github/workflows/: nix.yaml
src/: config.rs  endpoint_slice.rs  logging.rs  main.rs  operator.rs  statusplattform.rs  statusportal.rs
src/operator/: endpoint_slice.rs  java_dto.rs
src/statusplattform/: api_types.rs
