[package]
name = "statusplattform-nais-operator"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
color-eyre = "0.6.3"
futures = { version = "0.3.30", features = ["async-await"] }
k8s-openapi = { version = "0.21.1", features = ["v1_28"] }
kube = { version = "0.90.0", features = ["runtime"] }
opentelemetry-otlp = "^0"
opentelemetry_sdk = { version = "0.24.1", features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = "^0"
opentelemetry = { version = "0.24.0", features = ["trace"] }
reqwest = {version = "0.12.5", features = ["json", "rustls-tls"], default-features = false}
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["tracing", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
